cloudflare messing shit up again

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "GRAPH_KEY=88c2a93b547a89caea1d25a496ba6631 frog dev",
+    "dev": "GRAPH_KEY=xxx frog dev",
     "wrangler:dev": "wrangler dev src/index.tsx",
     "wrangler:deploy": "wrangler deploy --minify src/index.tsx",
     "wrangler:static": "cp -r ./node_modules/frog/_lib/ui/.frog ./public/frog"
